--- a/RecipeBox/Views/Recipes/Create.cshtml
+++ b/RecipeBox/Views/Recipes/Create.cshtml
@@ -15,12 +15,20 @@
     @Html.TextBoxFor(string ingredientString)
 
     @{
-    var ingredients = ingredientString.Split(',');
-
-    for (var i=0; i<ingredientString.Length; i++)
+    
+    if (ingredientsString.Length == 1)
     {
-        Model.Ingredients.Add(ingredients);
+        Model.Ingredients.Add(ingredientsString);
     }
+    else
+    {
+        var ingredients = ingredientString.Split(',');
+        for (var i=0; i<ingredientString.Length; i++)
+        {
+            Model.Ingredients.Add(ingredients);
+        }
+    }
+
     }
 
     @Html.Label("Select tag")
@@ -29,3 +37,4 @@
     <input type="submit" value="Add new item" class="btn btn-info" />
 }
 <p>@Html.ActionLink("Show all recipes", "Index")</p>
+   
