--- a/RecipeBox/Views/Tags/Details.cshtml
+++ b/RecipeBox/Views/Tags/Details.cshtml
@@ -14,7 +14,7 @@ else
   <ul>
   @foreach(var join in Model.Recipes)
   {
-    <li>@join.Recipe.Description</li>
+    <li>@join.Recipe.Name</li>
   }
   </ul>
 }
