--- a/RecipeBox/wwwroot/css/site.css
+++ b/RecipeBox/wwwroot/css/site.css
@@ -11,6 +11,7 @@ a.navbar-brand {
 -------------------------------------------------- */
 html {
   font-size: 14px;
+  background-color: rgb(224, 251, 255);
 }
 @media (min-width: 768px) {
   html {
@@ -44,6 +45,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  background-color: rgb(224, 251, 255);
 }
 .footer {
   position: absolute;
