working on css styling

--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<h1>Welcome to the RecipeBox!</h1>
+﻿
+<div class ="jumbotron">
+<h1>Welcome to the RecipeBox!</h1>
+</div>
 <p>@Html.ActionLink("See all tags", "Index", "Tags")</p>
 <p>@Html.ActionLink("See all recipes", "Index", "Recipes")</p>
 <p>@Html.ActionLink("Create an account", "Index", "Account")</p>
