--- a/RecipeBox/Views/Recipes/Edit.cshtml
+++ b/RecipeBox/Views/Recipes/Edit.cshtml
@@ -1,9 +1,9 @@
 @using System.Collections.Generic;
 
 @model RecipeBox.Models.Recipe
-
+<div class ="jumbotron">
 <h2>Edit</h2>
-
+</div>
 <h4>Edit this recipe: @Html.DisplayFor(model => model.Name)</h4>
 
 @using (Html.BeginForm())
