--- a/RecipeBox/Views/Recipes/Index.cshtml
+++ b/RecipeBox/Views/Recipes/Index.cshtml
@@ -1,22 +1,24 @@
 @using RecipeBox.Models;
 @model IEnumerable<RecipeBox.Models.Recipe>
-
+<div class ="jumbotron">
 <h1>Recipes for @User.Identity.Name</h1>
-
+</div>
+<div class ="recipehome">
 @if (Model.Any())
 {
-  <ul>
+  <h3>
     @foreach (Recipe recipe in Model)
     {
       <li>@Html.ActionLink($"{recipe.Name}", "Details", new { id = recipe.RecipeId })</li>
     }
-  </ul>
+  </h3>
 } 
 else
 {
   <h3>No recipes have been added yet!</h3>
 }
-
+<br>
 <p>@Html.ActionLink("Add new recipe", "Create")</p>
 
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
+</div>
