--- a/RecipeBox/Views/Tags/Create.cshtml
+++ b/RecipeBox/Views/Tags/Create.cshtml
@@ -1,6 +1,7 @@
 @model RecipeBox.Models.Tag
-
+<div class ="jumbotron">
 <h4>Add a new tag</h4>
+</div>
 @using (Html.BeginForm())
 {
     @Html.LabelFor(model => model.TagCategory)
