--- a/RecipeBox/Views/Tags/Details.cshtml
+++ b/RecipeBox/Views/Tags/Details.cshtml
@@ -1,6 +1,7 @@
 @model RecipeBox.Models.Tag
-
+<div class ="jumbotron">
 <h2>Tag Details</h2>
+</div>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.TagCategory): @Html.DisplayFor(model => model.TagCategory)</h3>
 
