--- a/RecipeBox/Views/Tags/Edit.cshtml
+++ b/RecipeBox/Views/Tags/Edit.cshtml
@@ -1,8 +1,8 @@
 
 @model RecipeBox.Models.Tag
-
+<div class ="jumbotron">
 <h2>Edit</h2>
-
+</div>
 <h4>Edit this tag: @Html.DisplayFor(model => model.TagCategory)</h4>
 
 @using (Html.BeginForm())
