--- a/RecipeBox/Views/Tags/Index.cshtml
+++ b/RecipeBox/Views/Tags/Index.cshtml
@@ -1,8 +1,8 @@
 @using RecipeBox.Models;
 @model List<RecipeBox.Models.Tag>;
-
+<div class ="jumbotron">
 <h1>Tags</h1>
-
+</DIV>
 @if (@Model.Count == 0)
 {
   <h3>No tags have been added yet!</h3>
