--- a/RecipeBox/Views/Recipes/Delete.cshtml
+++ b/RecipeBox/Views/Recipes/Delete.cshtml
@@ -1,7 +1,7 @@
 @model RecipeBox.Models.Recipe
-
+<div class ="jumbotron">
 <h2>Are you sure you want to delete this Recipe?</h2>
-
+</div>
 @Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
 @using (Html.BeginForm())
 {
