--- a/RecipeBox/Views/Tags/Delete.cshtml
+++ b/RecipeBox/Views/Tags/Delete.cshtml
@@ -1,7 +1,7 @@
 @model RecipeBox.Models.Tag
-
+<div class ="jumbotron">
 <h2>Are you sure you want to delete this?</h2>
-
+</div>
 @Html.DisplayNameFor(model => model.TagCategory): @Html.DisplayFor(model => model.TagCategory)
 @using (Html.BeginForm())
 {
