add rating property, migrate and update database, display ratings on index page

--- a/RecipeBox/Views/Recipes/Create.cshtml
+++ b/RecipeBox/Views/Recipes/Create.cshtml
@@ -15,6 +15,9 @@
             @Html.LabelFor(model => model.Ingredients)
             @Html.TextAreaFor(model => model.Ingredients)
             <br>
+            @Html.LabelFor(model => model.Rating)
+            @Html.TextAreaFor(model => model.Rating)
+            <br>
             @Html.Label("Select tag")
             @Html.DropDownList("TagId")
      <br>
