--- a/RecipeBox/Views/Shared/_Layout.cshtml
+++ b/RecipeBox/Views/Shared/_Layout.cshtml
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>RecipeBox</title>
+    
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <link rel="stylesheet" href="~/css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Modak&display=swap" rel="stylesheet">
+    
   </head>
   <body>
   <div class="container">
