add order by rating

--- a/RecipeBox/Views/Recipes/Index.cshtml
+++ b/RecipeBox/Views/Recipes/Index.cshtml
@@ -1,5 +1,7 @@
 @using RecipeBox.Models;
+@using System.Security.Claims;
 @model IEnumerable<RecipeBox.Models.Recipe>
+
 <div class ="jumbotron">
 <h1>Recipes for @User.Identity.Name</h1>
 </div>
@@ -24,6 +26,9 @@ else
   <h3>No recipes have been added yet!</h3>
 }
 <br>
+
+<p>@Html.ActionLink("Order by Rating", "SortByRating","Recipes", null, new { @class="button btn-info"})</p>
+
 <p>@Html.ActionLink("Add new recipe", "Create")</p>
 
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
