added empty string on the edit tag dropdown

--- a/RecipeBox/Views/Recipes/Edit.cshtml
+++ b/RecipeBox/Views/Recipes/Edit.cshtml
@@ -30,8 +30,8 @@
 
     <br>
 
-    @Html.Label("Select tag")
-    @Html.DropDownList("TagId")<br>
+    @Html.Label("Tag")
+    @Html.DropDownList("TagId", string.Empty)<br>
 
     <input type="submit" value="Save" />
 }
