fix ingredient index route

--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -4,4 +4,5 @@
 </div>
 <p>@Html.ActionLink("See all tags", "Index", "Tags")</p>
 <p>@Html.ActionLink("See all recipes", "Index", "Recipes")</p>
+<p>@Html.ActionLink("See all ingredients", "Index", "Ingredients")</p>
 <p>@Html.ActionLink("Create an account", "Index", "Account")</p>
