--- a/RecipeBox/Views/Ingredients/Index.cshtml
+++ b/RecipeBox/Views/Ingredients/Index.cshtml
@@ -2,7 +2,7 @@
 @model List<RecipeBox.Models.Ingredient>;
 <div class ="jumbotron">
 <h1>Ingredients</h1>
-</DIV>
+</div>
 @if (@Model.Count == 0)
 {
   <h3>No Ingredients have been added yet!</h3>
