--- a/RecipeBox/Views/Tags/Index.cshtml
+++ b/RecipeBox/Views/Tags/Index.cshtml
@@ -2,7 +2,7 @@
 @model List<RecipeBox.Models.Tag>;
 <div class ="jumbotron">
 <h1>Tags</h1>
-</DIV>
+</div>
 @if (@Model.Count == 0)
 {
   <h3>No tags have been added yet!</h3>
