working on editing ingredients per recipe

--- a/RecipeBox/Views/Recipes/AddIngredient.cshtml
+++ b/RecipeBox/Views/Recipes/AddIngredient.cshtml
@@ -1,15 +1,18 @@
+@using RecipeBox.Models
 @model RecipeBox.Models.Recipe
 <div class ="jumbotron">
-<h2>Add a tag</h2>
+<h2>Add an ingredient</h2>
 </div>
-<h4>Add a tag to this recipe: @Html.DisplayFor(model => model.Name)</h4>
+<h4>Add an ingredient to this recipe: @Html.DisplayFor(model => model.Name)</h4>
 
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(model => model.RecipeId)
 
-    @Html.Label("Select tag")
-    @Html.DropDownList("TagId")
+
+
+    @Html.Label("Select ingredient")
+    @Html.DropDownList("IngredientId")
 
     <input type="submit" value="Save" class ="btn default" />
 }
